# funcy-pipe

./: .copier-answers.yml  .envrc  .gitignore  .tool-versions  CHANGELOG.md  Justfile  README.md  TODO  generate_stub.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: alembic-migrations.instructions.md  fastapi.instructions.md  pytest-integration-tests.instructions.md  pytest-tests.instructions.md  python-app.instructions.md  python-route-tests.instructions.md  python.instructions.md  react-router.instructions.md  react.instructions.md  shell.instructions.md  typescript.instructions.md
.github/prompts/: fastapi_stripe.prompt.md  fix-tests.prompt.md  implement-fastapi-routes.prompt.md  plan-only.prompt.md  python-command.prompt.md  react-router-client-loader.prompt.md  refactor-on-instructions.prompt.md  secrets.prompt.md  standalone-python-scripts.prompt.md  stripe-backend.prompt.md  typescript-docstring.prompt.md
.github/workflows/: build.yml  build_and_publish.yml  repo-sync.yml
funcy_pipe/: __init__.py  __init__.pyi  chain.py  constants.py  funcy_extensions.py  macro.py  pipe.py
tests/: conftest.py  extensions_test.py  test_basic.py  test_chain_basic.py  test_import.py  test_pipe_basic.py
tests/extensions/: aggregates_test.py  test_detect.py  test_sample.py
