[project]
name = "funcy-pipe"
version = "0.14.0"
description = "If Funcy and Pipe had a baby. Decorates all Funcy methods with Pipe superpowers."
keywords = [
  "python",
  "functional-programming",
  "pipe",
  "funcy",
  "data-manipulation",
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["funcy>=2.0"]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
license = { file = "LICENSE" }
urls = { "Repository" = "https://github.com/iloveitaly/funcy-pipe" }

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[tool.uv.sources.funcy]
git = "https://github.com/Suor/funcy.git"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pyright[nodejs]>=1.1.380",
    "ruff>=0.8.0",
    "pytest-markdown-docs>=0.5.1",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --markdown-docs"

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]

[tool.ruff.lint]
# do not assign a lambda expression, use a def
ignore = ["E731"]
